--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285995.md#1" target="_blank">杨宁：从市委书记出丑说被膜拜的延安真相</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
