--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,7 +9,8 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
+<p><strong><ahref="#_Toc2020101912">专家：接下来6至12周将是大流行最黑暗时期</a></strong><br />
+<strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
 <strong><ahref="#_Toc2020101910">全球病例数突破4千万 死亡逾111万</a></strong><br />
 <strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
 <strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
@@ -25,8 +26,11 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101912"></a></p>
 <h3>专家：接下来6至12周将是大流行最黑暗时期</h3>
 <p>上周日（18日），美国明尼苏达大学传染病研究与政策中心主任奥斯特霍姆（Michael Osterholm）在NBC节目“与媒体见面”中警告，“接下来的6至12周将是整个大流行最黑暗的时期”。</p>
+<p>奥斯特霍姆告诉该节目主持人查克·托德（Chuck Todd），尽管取得了一些进展，但“疫苗要到明年第三季度才能以任何有意义的方式提供。”</p>
+<p>奥斯特霍姆在节目中还表示： “我们确实有疫苗和治疗方法，但接下来的6到12周将是整个大流行病最黑暗的时期。”</p>
 <h3>英国博尔顿女议员染疫住院</h3>
 <p>英国大曼彻斯特地区博尔顿议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
 <p>库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
@@ -220,7 +224,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/29/n10939788.md#1" target="_blank">共产暴政录：湖南道县大屠杀</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
