--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10157890.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（四）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/1/n11424188.md#1" target="_blank">前加拿大世姐：我是如何改变对法轮功看法</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
