--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -224,7 +224,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9772848.md#1" target="_blank">刘晓：救了毛一命的延安保卫处长凄惨下场</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/29/n11353494.md#1" target="_blank">章天亮：倾国家之力的迫害</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
