--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -228,7 +228,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/28/n10257597.md#1" target="_blank">中共淫乱的前生今世（8）党官淫乱校园</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10948448.md#1" target="_blank">新年感恩 中国百姓盼李洪志大师早日回国</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257164.md#1" target="_blank">【征文】凌晓辉：贞洁论（四）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10920991.md#1" target="_blank">十八年宿疾消散 台湾女子感恩法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
